--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,8 @@
 }
 
 /* per-page-and-pagination */
+
+/* select per page */
 .per-page-and-pagination {
   width: 100%;
   display: flex;
@@ -66,6 +68,7 @@
   margin-right: 10px;
 }
 
+/* pagination */
 .page-link {
   background-color: #fff;
   color: #52afa2 !important;
