--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,16 @@
   color: #fff;
 }
 
+.background .search-input{
+  width: 300px;
+  padding: 10px 14px;
+  outline: none;
+  border-radius: 5px;
+  border: none;
+  color: #6a6a6a;
+  letter-spacing: 0.09em;
+}
+
 .imgs-container {
   width: 100%;
   display: flex;
